compiler/test-data/parser/errors/backend/missing_backend_name.frel
module test

backend {
    count : i32 = 0
}
